--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,110 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
+/*
+=============== 
+Fonts
+===============
+*/
+@import url("");
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
+/*
+=============== 
+Variables
+===============
+*/
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+:root {
+  /* dark shades of primary color*/
+  --clr-primary-1: #E94057;
+
+  
+  --ff-primary: 
+  --ff-secondary: ;
+
+  --transition: all 0.3s linear;
+  --spacing: 0.5rem;
+  --radius: 15px;
+  --light-shadow: 
+}
+/*
+=============== 
+Global Styles
+===============
+*/
+html {
+  font-size: 62.5%;
+}
+*,
+::after,
+::before {
+  /* margin: 0;
+  padding: 0; */
+  box-sizing: border-box;
+}
+body {
+  font-family: ;
+  background: ;
+  color: #0000;
+  line-height: 1.5;
+  font-size: ;
+}
+ul {
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
+}
+h1,
+h2,
+h3,
+h4 {
+  letter-spacing: var(--spacing);
+  text-transform: ;
+  line-height: 1.25;
+  margin-bottom: 0.75rem;
+  font-family: var(--ff-primary);
+}
+h1 {
+  font-size: 3.4rem;
+  font-weight: 700;
+}
+h2 {
+  font-size: 2.4rem;
+  font-weight: 700;
+
+}
+h3 {
+  font-size: 1.6rem;
+  font-weight: 700;
+
+}
+h4 {
+  font-size: 0.875rem;
+}
+p {
+  color: #0000;
+}
+@media screen and (min-width: 800px) {
+  h1 {
+    font-size: 4rem;
   }
-  to {
-    transform: rotate(360deg);
+  h2 {
+    font-size: 2.5rem;
+  }
+  h3 {
+    font-size: 1.75rem;
+  }
+  h4 {
+    font-size: 1rem;
+  }
+  body {
+    font-size: 1rem;
+  }
+  h1,
+  h2,
+  h3,
+  h4 {
+    line-height: 1;
   }
 }
+/*  global classes */
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
+/* section */
