--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ Variables
 :root {
   /* dark shades of primary color*/
   --clr-primary-1: #E94057;
+  --clr-gray: #E8E6EA;
 
   
   --ff-primary: 
@@ -42,8 +43,10 @@ html {
 body {
   color: #000;
   line-height: 1.5;
-  padding: 1rem 3rem 0;
+  /* padding: 1rem 3rem 0; */
   height: 100%;
+  font-size: 1.4rem;
+
 }
 ul {
   list-style-type: none;
@@ -79,6 +82,11 @@ h4 {
 }
 p {
   color: #000;
+  font-size: 1.4rem;
+}
+button{
+  font-size: 1.4rem;
+  font-weight: 700;
 }
 @media screen and (min-width: 800px) {
   h1 {
